<resources>

    <string name="app_name">WhatsThatAd</string>
    <string name="singleplayer">   Singleplayer</string>
    <string name="multiplayer">   Multiplayer</string>
    <string name="addAnAdd">   Add an Ad</string>
    <string name="options">   Options</string>
    <string name="exit">   Exit</string>
    <string name="social_media_txt">Need help? Ask a friend:</string>
    <string name="player1_touc_area">Toucharea Player 1</string>
    <string name="player2_touch_area">Toucharea Player 2</string>
    <string name="logo">Logo</string>
    <string name="leave_cancel">No return</string>
    <string name="leave_ok">Yes close app</string>
    <string name="leave_message">Do you really want to leave?</string>
    <string name="player2Enter">Enter Name Player 2:</string>
    <string name="player1Enter">Enter Name Player 1:</string>
    <string name="start">Start</string>
    <string name="multi_info_player_change">Answer the Question</string>
    <string name="multi_info_correct_answer">Correct answer</string>
    <string name="multi_info_wrong_answer">Wrong answer</string>
    <string name="player">Player</string>
    <string name="hidePart">Hide Part</string>
    <string name="blurPart">Blur Part</string>
    <string name="resize">Resize Image</string>
    <string name="editor_next">Next Step</string>
    <string name="upload_image_txt">Please upload your question image first</string>
    <string name="upload_ques_text">Enter the question to your image</string>
    <string name="question">Question</string>
    <string name="upload_correct_answer">Enter the correct answer</string>
    <string name="answer_poss_1">Answer Possibility 1</string>
    <string name="answer_poss_2">Answer Possibility 2</string>
    <string name="answer_poss_3">Answer Possibility 3</string>
    <string name="answer_poss_4">Answer Possibility 4</string>
    <string name="save_question">Save Question</string>
    <string name="question_details">Question Details</string>
    <string name="next_level_info">Ads solved for current Level</string>
    <string name="multi_info_win">won the game!</string>

</resources>