<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="277dp"
        android:layout_height="156dp"
        android:contentDescription="@string/logo"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/MenuBtnSingleplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singleplayer" />

    <Button
        android:id="@+id/MenuBtnMultiplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/muliplayer" />

    <Button
        android:id="@+id/MenuBtnAddAnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addAnAdd" />

    <Button
        android:id="@+id/MenuBtnOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options" />

    <Button
        android:id="@+id/MenuBtnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

</LinearLayout>